<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    android:background="@color/colorHomeBackground"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            app:cardBackgroundColor="@color/colorBlueAppNameCard"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtAppName"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:paddingLeft="5dp"
                android:text="@string/calm_dine_02"
                android:textColor="@color/colorAppNameCardText"
                android:textSize="40sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtMapDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/map_description" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:name="com.google.android.gms.maps.MapFragment"
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_margin="2dp"
            android:layout_height="450dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/description_noise" />

            <Spinner
                android:id="@+id/spinnerNoise"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginRight="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/description_light" />

            <Spinner
                android:id="@+id/spinnerLight"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginRight="30dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRecommendation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_rounded_recommendation"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:onClick="onRecommendationList"
            android:text="@string/recommend" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>