<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="257dp"
        app:cardBackgroundColor="@color/design_default_color_primary"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtAppName"
                android:layout_width="fill_parent"
                android:layout_height="90dp"
                android:layout_marginTop="1dp"
                android:fontFamily="serif"
                android:text="@string/calm_dine"
                android:textAlignment="center"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/txtSubHeading"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/sub_heading"
                android:textAlignment="center" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:paddingTop="50dp"
        android:background="@raw/login"
        android:orientation="vertical"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="User Name"
            android:inputType="textPersonName"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/white"
            android:text=""
            android:shadowColor="@color/quantum_black_100"
            android:shadowRadius="5"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:backgroundTint="@color/white"
            android:shadowColor="@color/quantum_black_100"
            android:shadowRadius="5"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnLoginSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:onClick="onLogin"
            android:background="@drawable/btn_rounded"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtSignUpLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/noAccount"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/txtLoginOrSignUpSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:onClick="onSignUpLogin"
                android:text="@string/signUp"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlueSignUpLogin"
                android:textStyle="bold|italic" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="368dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>