<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:background="@drawable/customborder"
    android:paddingBottom="4dp">

    <ImageView
        android:id="@+id/imgRestaurant"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:padding="0dp"
        android:scaleType="centerCrop"
        app:srcCompat="@raw/table"
        tools:srcCompat="@raw/table" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginLeft="1dp"
        android:paddingTop="5dp"
        android:layout_marginRight="1dp"
        android:padding="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtRestaurantName"
            android:gravity="center_horizontal"
            android:textSize="17sp"
            android:textStyle="italic|bold"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Restaurant Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtNoise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/noise" />

            <TextView
                android:id="@+id/txtNoiseValue"
                android:layout_width="wrap_content"
                android:maxWidth="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="xxx dB" />

            <TextView
                android:id="@+id/txtLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/light" />

            <TextView
                android:id="@+id/txtLightValue"
                android:layout_width="wrap_content"
                android:maxWidth="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="xxx lux" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginRight="0dp"
                android:paddingRight="0dp"
                android:text="@string/current_rating" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginLeft="2dp"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_gravity="center|left"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.5"
                android:theme="@style/MyRatingBar" />

            <TextView
                android:id="@+id/txtRateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="10sp"
                android:text="(abc)" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
